feat: added endpoints for cve and cwe
