# main.py
@@ -3,32 +3,26 @@ import json
 import quart
 import quart_cors
 from quart import request
+import aiohttp
+
 
 app = quart_cors.cors(quart.Quart(__name__), allow_origin="https://chat.openai.com")
 
-# Keep track of todo's. Does not persist if Python session is restarted.
-_TODOS = {}
+cve_api_url = "https://cve.circl.lu/api"
 
-@app.post("/todos/<string:username>")
-async def add_todo(username):
-    request = await quart.request.get_json(force=True)
-    if username not in _TODOS:
-        _TODOS[username] = []
-    _TODOS[username].append(request["todo"])
-    return quart.Response(response='OK', status=200)
+@app.get("/api/cve/<string:cveId>")
+async def get_cve(cveId):
+    async with aiohttp.ClientSession() as session:
+        async with session.get(f"{cve_api_url}/cve/{cveId}") as resp:
+            data = await resp.text()
+    return quart.Response(response=data, status=200)
 
-@app.get("/todos/<string:username>")
-async def get_todos(username):
-    return quart.Response(response=json.dumps(_TODOS.get(username, [])), status=200)
-
-@app.delete("/todos/<string:username>")
-async def delete_todo(username):
-    request = await quart.request.get_json(force=True)
-    todo_idx = request["todo_idx"]
-    # fail silently, it's a simple plugin
-    if 0 <= todo_idx < len(_TODOS[username]):
-        _TODOS[username].pop(todo_idx)
-    return quart.Response(response='OK', status=200)
+@app.get("/api/cwe")
+async def get_cwe_list():
+    async with aiohttp.ClientSession() as session:
+        async with session.get(f"{cve_api_url}/cwe") as resp:
+            data = await resp.text()
+    return quart.Response(response=data, status=200)
 
 @app.get("/logo.png")
 async def plugin_logo():
